--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "crypto-js": "^3.1.9-1",
+    "bootstrap": "3.3.7",
+    "jquery": "3.2.1"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.0.28",
