--- a/package.json
+++ b/package.json
@@ -26,9 +26,16 @@
     "zone.js": "^0.8.14",
     "crypto-js": "^3.1.9-1",
     "bootstrap": "3.3.7",
-    "jquery": "3.2.1"
+    "jquery": "3.2.1",
+    "d3": "^4.12.2"
   },
   "devDependencies": {
+    "@types/core-js": "0.9.34",
+    "@types/d3-array": "1.0.5",
+    "@types/d3-axis": "1.0.5",
+    "@types/d3-scale": "1.0.4",
+    "@types/d3-selection": "1.0.5",
+    "@types/d3-shape": "1.0.5",
     "@angular-devkit/core": "0.0.28",
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.0.0",
