--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jquery": "3.2.1",
     "d3": "^4.12.2",
     "moment": "^2.20.1",
-    "d3-scale-chromatic": "^1.1.1"
+    "d3-scale-chromatic": "^1.1.1",
+    "d3-selection-multi": "^1.0.1"
   },
   "devDependencies": {
     "@types/core-js": "0.9.34",
